--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-github-blockquote-alert": "^1.2.1",
+    "remark-html": "^16.0.1",
+    "remark-obsidian": "^1.8.0",
+    "remark-prism": "^1.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.14",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
