--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-html": "^16.0.1",
     "remark-obsidian": "^1.8.0",
-    "remark-prism": "^1.3.6"
+    "remark-prism": "^1.3.6",
+    "remark-toc": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
