--- a/package.json
+++ b/package.json
@@ -14,17 +14,18 @@
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "rehype-raw": "^7.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-html": "^16.0.1",
-    "remark-obsidian": "^1.8.0",
     "remark-prism": "^1.3.6",
     "remark-toc": "^9.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
     "postcss": "^8",
+    "remark-obsidian-callout": "^1.3.2",
     "tailwindcss": "^3.4.1"
   }
 }
