--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-html": "^16.0.1",
+    "remark-obsidian-callout": "^1.3.2",
+    "remark-parse": "^11.0.0",
     "remark-prism": "^1.3.6",
-    "remark-toc": "^9.0.0"
+    "remark-rehype": "^11.1.0",
+    "remark-toc": "^9.0.0",
+    "unified": "^11.0.5",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.14",
     "postcss": "^8",
-    "remark-obsidian-callout": "^1.3.2",
     "tailwindcss": "^3.4.1"
   }
 }
