--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "rehype-highlight": "^7.0.0",
+    "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
