--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rehype-highlight": "^7.0.0",
     "rehype-parse": "^9.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.0",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.0",
@@ -27,6 +28,7 @@
     "remark-prism": "^1.3.6",
     "remark-rehype": "^11.1.0",
     "remark-toc": "^9.0.0",
+    "tocbot": "^4.29.0",
     "unified": "^11.0.5",
     "unist-util-visit": "^5.0.0"
   },
