--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "14.2.5",
+    "nextra": "^3.0.4",
+    "nextra-theme-docs": "^3.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
